# User-Friction-Intelligence-Platform

./: .env.development  .gitignore  Makefile  README.md  UFIP_IDE_REFERENCE.md  mlflow.db  pyproject.toml
app/: dashboard.py
backend/: pom.xml
backend/src/main/java/com/ufip/api/: UfipApiApplication.java
backend/src/main/java/com/ufip/api/config/: CorsConfig.java
backend/src/main/java/com/ufip/api/controllers/: TelemetryController.java
backend/src/main/java/com/ufip/api/models/: Event.java  FrictionScore.java  RecoveryRecommendation.java  Session.java  User.java  UserCohort.java
backend/src/main/resources/: application.properties
backend/src/test/java/com/ufip/api/: UfipApiApplicationTests.java
database/: connection.py  models.py  seed.py  ufip_dump.sql  views.py
frontend/src/: App.jsx  index.css
frontend/src/pages/: CustomerEmpathy.jsx  EngineControl.jsx  Home.jsx  MLAnalytics.jsx
mlruns/1/models/m-24a713042c4d41d98fe2e707f155105f/artifacts/: MLmodel  model.pkl
mlruns/1/models/m-3a0335aea33348569ab5a4f652d25556/artifacts/: MLmodel
mlruns/1/models/m-57da43bec99c4f77a8e76746f7a3b6bf/artifacts/: MLmodel  python_env.yaml
mlruns/1/models/m-60f7413a6dc248749d50a7448f1f0af1/artifacts/: MLmodel
mlruns/1/models/m-dcd80766a3e7478f80c31f5d8701a93e/artifacts/: MLmodel
mlruns/1/models/m-f96fb60b15d541a8a5a8da7c39b35616/artifacts/: MLmodel  conda.yaml  model.pkl
models/: clustering.py  friction_scorer.py  mlflow.db  recovery_generator.py
pipelines/: etl_flow.py
tests/: test_clustering.py  test_dashboard.py  test_scoring.py
(+1 files in other folders)
