[project]
name = "ufip"
version = "0.1.0"
description = "User Friction Intelligence Platform (UFIP)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "sqlalchemy>=2.0.0",
    "pymysql>=1.1.0",
    "prefect>=2.10.0",
    "mlflow>=2.3.0",
    "scikit-learn>=1.2.0",
    "streamlit>=1.22.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.24.0",
    "cryptography>=41.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0"
]

[tool.setuptools]
packages = ["app", "models", "database", "pipelines"]

